# ZFileSync

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: rel33ease.yml  rele4124123ase.yml  workflow.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  events.rs  lib.rs  main.rs
src-tauri/src/sync/: apply.rs  ignore.rs  mod.rs  pair.rs  reconcile.rs  watcher.rs
src/components/: AboutPanel.tsx  ActivityFeed.tsx  AddPairDialog.tsx  ConflictPrompt.tsx  ErrorBoundary.tsx  ErrorToasts.tsx  PairCard.tsx  PairList.tsx  QAPanel.tsx  RespawnPrompt.tsx  SettingsPanel.tsx  Sidebar.tsx  Skeleton.tsx
src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Switch.tsx
src/lib/: ipc.ts
src/stores/: useActivity.ts  useErrors.ts  usePairs.ts
src/styles/: index.css
